--- a/dotskin-website/package.json
+++ b/dotskin-website/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-webhook": "^0.0.2",
+    "jquery": "^3.7.1",
     "next": "14.2.14",
     "react": "^18",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18",
-    "react-owl-carousel": "^2.3.3"
+    "sass": "^1.79.4",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "eslint": "^8.57.1",
