--- a/dotskin-website/package.json
+++ b/dotskin-website/package.json
@@ -13,6 +13,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.21.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
@@ -21,6 +22,7 @@
     "jquery": "^3.7.1",
     "next": "14.2.14",
     "postcss": "^8.4.25",
+    "prisma": "^5.21.1",
     "react": "^18",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18",
